<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Away Day</string>
    <string name="menu_widgets">Widgets</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_settings">Settings</string>
    <string name="hotel_label_english">Your Desire, Ultimate Relaxation</string>
    <string name="hotel_label_chinese">你的祈愿，极致休闲</string>
    <string name="hotel_label_summary">- 酒店概况</string>
    <string name="hotel_label_details">青城（豪生）国际酒店坐落于世界文化遗产、国家5A风景区四川省都江堰市青城山风景区，毗邻青城前山山门，是青城山景区首家国际五星级酒店、由美国排名第一的温德姆酒店管理集团管理，曾多次出色完成国家领导人的接待任务。酒店地理位置优越，交通便捷，有多条高速公路和快速通道直达成都市区及双流国际机场。 酒店占地400余亩，建筑秉承青城山道家思想理念，环境优美。建筑气势恢弘，与古木参天、幽静秀美的青城山遥相呼应，装饰独具匠心，配套设施齐全，人性化服务细致入微，充分体现建筑与环境、产品与服务、人与自然的高度和谐统一。 远离城市喧嚣，和着鸟语蝉鸣，吸纳人间仙境飘来的习习新风，细细品味宁静致远、天人合一的超然境界，一切都从这里开始……</string>
    <string name="hotel_label_location">- 地理位置</string>
    <string name="hotel_label_location_details"> 位于素有“青城天下幽”美誉，世界文化遗产地、国家5A级风景区的青城山山脚。毗邻青城山游客服务中心、青城前山牌坊。交通便捷，环境优美，气候宜人，常年温度15.2℃，负氧离子丰富。是您商务会议、休闲度假、避暑养生的首选。</string>
    <string name="hotel_label_from_city_center">·距成都市中心</string>
    <string name="hotel_label_from_city_center_value">1小时车程</string>
    <string name="hotel_label_from_train">·距成都火车北站</string>
    <string name="hotel_label_from_train_value">50分钟</string>
    <string name="hotel_label_from_air_port">·距成都双流国际机场</string>
    <string name="hotel_label_from_air_port_value">50分钟</string>
    <string name="hotel_label_from_dujiangyan">·距都江堰风景区</string>
    <string name="hotel_label_from_dujiangyan_value">15分钟</string>
    <string name="hotel_label_from_qingchengshan">·距青城山风景区</string>
    <string name="hotel_label_from_qingchengshan_value">1公里</string>
    <string name="hotel_label_from_express">·距成青快铁青城山站</string>
    <string name="hotel_label_from_express_value">1公里</string>
    <string name="google_map_api_key">07kQJecEFhkp6kAzGwIzIwPbp7y8IkW_yOUovOA</string>
    <string name="remind_me">Remind Me:</string>
</resources>
