<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_english"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_chinese"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_summary"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_details"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_location"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_location_details"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_city_center"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_city_center_value"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_train"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_train_value"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_air_port"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_air_port_value"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_dujiangyan"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_dujiangyan_value"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_qingchengshan"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_qingchengshan_value"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_express"
                />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hotel_label_from_express_value"
                />
    </LinearLayout>
</ScrollView>
